Changes in Caudium 1.3 since Caudium 1.3.14
-------------------------------------------
- Fix a bug in autoconf script that stop the correct detection of pike
  version and include under a FreeBSD port.
- Fix a bug in ssl3.pike where the redirect from http would always pick the
  admin port.
- Caudium.make_tag_attributes() now write args whose name value equals name
  as foo="foo" instead of just foo.
  This might be some legacy stuff that isn't XML compliant. 
  This applies to Caudium.make_tag() and Caudium.make_container().
- Now pike highlighter supports CSS :)
- Added sscanf container for RXML.
- Open Ports Wizard is now fixed and give more accurate informations.
- Old FCGI-CGI backend is now disabled per default. If you'd like to use the
  old FastCGI interface, please provide --with-oldfastcgi to ./configure 
  script.
- Added AJP | Tomcat Connector module to allow connecting to Jakarta 
  Tomcat and Jetty servlet engines.
- <if group="somegroup"> now consults the new naming system for group 
  membership information, as well as the groupfile option.
- LDAP and SQL authentication sources have been completely rewritten, 
  with incompatible settings. Users of these authentication sources will 
  need to check their settings when these modules are upgraded.
- Authentication and naming system has been completely rewritten. The 
  system consists of a Master handler and one or more stackable 
  authentication source providers. The new system also provides built in 
  access to groups and group membership information. The new 
  authentication system  provides new APIs, the existing APIs have been  
  deprecated. Virtual servers that utilize existing authentication modules 
  will be upgraded to the new system automatically on the first startup.
- An automatic upgrade system is in place, for updating settings that may 
  have incompatably changed between releases. A global variable "Upgrade 